Assets/Msdk/Editor/Librarys/iOS3.2/MSDKAdapter/MSDKAdapter.framework/Headers/iOSConnector.h

     /**  分享ARK到QQ
     *
     * 分享时调用
     * @param scene QQScene_QZone:空间，默认弹框 QQScene_Session:好友
     * @param title 标题
     * @param desc 内容
     * @param url  内容的跳转url，填游戏对应游戏中心详情页
     * @param imgUrl 图片url
     * @param jsonString ARK分享jsonString（此处由业务侧与手q ARK开发时约定如何配置，msdk仅透传）
     * @return void
     */
    extern void SendToQQWithArk(
                           int scene,
                           unsigned char* title,
                           unsigned char* desc,
                           unsigned char* url,
                           unsigned char* imgUrl,
                           unsigned char* jsonString,
                           unsigned char* messageExt,
                           unsigned char* gameTag
                           );
    /**  分享纯文字到QQ空间
     *
     * 分享时调用
     * @param text 内容
     * @return 
     */
    extern void SendToQQWithText(unsigned char* text, unsigned char* extraScene, unsigned char* messageExt);
    /**
     * 上报C#、JS、Lua等异常
     * exception_type：异常类型
     * exception_name：异常名称
     * excetipon_name：异常信息
     * exception_stack：异常堆栈
     * ext_info：附加信息
     */
    extern void ReportException(int exception_type,
                         char* exception_name,
                         char* exception_msg,
                         char* exception_stack,
                         char* ext_info);
    /**
    * 获取unionid(qq用户唯一标识), 回调在OnRelationNotify中
    * 其中RelationRet.persons为一个Vector，Vector的第一项即为自己的资料
     * 个人信息中包含unionID，其类型为一个string
    */
    extern void QueryUnionID();
    
    /**
     *  获取当前玩家的国籍信息(根据接入的IP)。回调到OnLocationGotCountryFromIPNotify
     *  通过游戏设置的全局回调的OnLocationGotCountryFromIPNotify(GetCountryFromIPRet &fromIPRet)
     *  方法返回数据给游戏fromIPRet
     *     fromIPRet.country 客户端IP对应的ISO_3166-1标准中的国家或地区中文名称
     *     fromIPRet.isQueryByRequestHeader  false: 通过查询缓存中的映射关系获得结果；true：通过请求投中的信息获得结果
     *     fromIPRet.ret 值表示返回状态,ret为0才表示成功
     *     fromIPRet.msg 表示传递的消息ret不为0时错误原因
     */
    extern void GetCountryFromIP();
    /**
     *  获取当前玩家的国家及省市信息
     *  通过游戏设置的全局回调的OnLocationGetIPInfoNotify(GetIPInfoRet &ipInfoRet)
     *  方法返回数据给游戏ipInfoRet
     */
    extern void GetIPInfo();
     /**
     * 分享丰富的图片到空间
     * @param summary 分享的正文(无最低字数限制，最高1w字)
     * @param imageDatas 分享的图片的本地路径，可支持多张图片(<=9
     * 张图片为发表说说，>9 张图片为上传图片到相册)，只支持本地图片
     * 注意: 此功能只在手Q5.9.5及其以上版本支持
     */
    extern void SendToQQWithRichPhoto(unsigned char *summary, const char* imgParamsData , const unsigned char *extraScene,
                                 const unsigned char *messageExt);
    /**
     * 游戏群绑定：游戏公会/联盟内，公会会长可通过点击“绑定”按钮，拉取会长自己创建的群，绑定某个群作为该公会的公会群
     * @param cUnionid 公会ID，opensdk限制只能填数字，字符可能会导致绑定失败
     * @param cUnion_name 公会名称
     * @param cZoneid 大区ID，opensdk限制只能填数字，字符可能会导致绑定失败
     * @param cSignature 游戏盟主身份验证签名，生成算法为openid_appid_appkey_公会id_区id 做md5.
     * 					   如果按照该方法仍然不能绑定成功，可RTX 咨询 OpenAPIHelper
     *
     */
    /*extern void BindQQGroup(
                                 char* cUnionid,
                                 char* cUnion_name,
                                 char* cZoneid,
                                 char* cSignature);
    */
    /**
     * 公会成员加QQ群接口
     * @param groupNum 必填参数 公会群号(非工会ID)，绑群成功后游戏(工会会长)可到 http://qun.qq.com 获取
     * @param groupKey 必填参数 需要添加的QQ群对应的key，绑群成功后游戏(工会会长)可到
     */
   // extern void JoinQQGroup(unsigned char* cQQGroupNum, unsigned char* cQQGroupKey);
    
    /**
     *
     *获取绑定手q群的群号
     * guildId：公会id（必填）
     * zoneId:区服ID（必填）
     * type："0"公会，"1"队伍，"2"赛事（必填）
     */
    extern void GetQQGroupCodeV2(
                                unsigned char*guildId,
                                unsigned char*guildName, 
                                unsigned char* leaderOpenId, 
                                unsigned char* leaderRoleId, 
                                unsigned char* leaderZoneId,
                                unsigned char* zoneId,
                                unsigned char* partition,
                                unsigned char* roleId,
                                unsigned char* roleName,
                                unsigned char* userZoneId,
                                unsigned char* userLabel,
                                unsigned char* nickName,
                                unsigned char* type,
                                unsigned char* areaId);
    
    /**
     *
     *查询绑定的公会信息
     *
     * groupId：手q群ID（原gc）
     * type:"0"公会，"1"队伍，"2"赛事
     */
    extern void QueryBindGuildV2(unsigned char *groupId, unsigned int type = 0);
    
    /**
     *
     *查询创建的qq群列表（与是否绑定无关）
     *
     */
    extern void GetQQGroupListV2();
    
    
    extern void RemindGuildLeaderV2(
                                unsigned char*guildId,
                                unsigned char*guildName, 
                                unsigned char* leaderOpenId, 
                                unsigned char* leaderRoleId, 
                                unsigned char* leaderZoneId,
                                unsigned char* zoneId,
                                unsigned char* partition,
                                unsigned char* roleId,
                                unsigned char* roleName,
                                unsigned char* userZoneId,
                                unsigned char* userLabel,
                                unsigned char* nickName,
                                unsigned char* type,
                                unsigned char* areaId);
    extern void BindExistQQGroupV2(
                                unsigned char*guildId,
                                unsigned char*guildName, 
                                unsigned char* leaderOpenId, 
                                unsigned char* leaderRoleId, 
                                unsigned char* leaderZoneId,
                                unsigned char* zoneId,
                                unsigned char* partition,
                                unsigned char* roleId,
                                unsigned char* roleName,
                                unsigned char* userZoneId,
                                unsigned char* userLabel,
                                unsigned char* nickName,
                                unsigned char* type,
                                unsigned char* areaId,
                                unsigned char* groupId,
                                unsigned char* groupName);
    /**
     * 上报日志到bugly
     * @param level 日志级别，默认eBuglyLogLevel_I
     *  eBuglyLogLevel_S (0), //Silent
     *  eBuglyLogLevel_E (1), //Error
     *  eBuglyLogLevel_W (2), //Warning
     *  eBuglyLogLevel_I (3), //Info
     *  eBuglyLogLevel_D (4), //Debug
     *  eBuglyLogLevel_V (5); //Verbose
     *
     * @param log 日志内容
     *
     *  该日志会在crash发生时进行上报，上报日志最大30K
     */
    extern void BuglyLog(int level, unsigned char* log);
    
    /**
     * 关闭bugly上报 
     */
    extern void CloseCrashReport();
    
    /**
     *　QQ游戏公会获取加群用的groupKey接口
     * @param groupOpenId 和游戏公会ID绑定的QQ群的groupOpenid，来自于公会会长绑群时获得
     *
     *
     */
    //extern void QueryQQGroupKey(unsigned char* groupOpenId);
    
    /**
     *　QQ群与工会绑定接口（新）(使用时需要申请权限)
     * @param guildId 工会ID
     * @param zoneId 大区ID
     * @param guildName 工会名称
     * @param roleId 角色id
     * @param partition 小区）区服id
     *
     */

    extern void CreateQQGroupV2(
                                unsigned char*guildId,
                                unsigned char*guildName, 
                                unsigned char* leaderOpenId, 
                                unsigned char* leaderRoleId, 
                                unsigned char* leaderZoneId,
                                unsigned char* zoneId,
                                unsigned char* partition,
                                unsigned char* roleId,
                                unsigned char* roleName,
                                unsigned char* userZoneId,
                                unsigned char* userLabel,
                                unsigned char* nickName,
                                unsigned char* type,
                                unsigned char* areaId);
    
    /**
     *　游戏内查询用户与群关系接口（新）(使用时需要申请权限)
     * @param guildId 	群id
     *
     */
    extern void QueryQQGroupInfoV2(unsigned char* groupId);
    
    /**
     *　游戏内与QQ加群接口（新）(使用时需要申请权限)
     * @param guildId 工会ID
     * @param zoneId 大区ID
     * @param groupId 	群号
     * @param roleId 角色id
     * @param partition 小区）区服id
     *
     */
    extern void JoinQQGroupV2(
                                unsigned char*guildId,
                                unsigned char*guildName, 
                                unsigned char* leaderOpenId, 
                                unsigned char* leaderRoleId, 
                                unsigned char* leaderZoneId,
                                unsigned char* zoneId,
                                unsigned char* partition,
                                unsigned char* roleId,
                                unsigned char* roleName,
                                unsigned char* userZoneId,
                                unsigned char* userLabel,
                                unsigned char* nickName,
                                unsigned char* type,
                                unsigned char* areaId,
                                unsigned char* groupId);
    
    /**
     *　游戏内与QQ解绑群接口（新）(使用时需要申请权限)
     * @param guildId 工会ID
     * @param zoneId 大区ID
     * @param guildName 	工会名称
     *
     */
    extern void UnbindQQGroupV2(
                                unsigned char*guildId,
                                unsigned char*guildName, 
                                unsigned char* leaderOpenId, 
                                unsigned char* leaderRoleId, 
                                unsigned char* leaderZoneId,
                                unsigned char* zoneId,
                                unsigned char* partition,
                                unsigned char* roleId,
                                unsigned char* roleName,
                                unsigned char* userZoneId,
                                unsigned char* userLabel,
                                unsigned char* nickName,
                                unsigned char* type,
                                unsigned char* areaId);
    
    /**
     *　微信解绑群
     * @param groupId 工会ID
     *
     */
    extern void UnbindWeiXinGroup(unsigned char* groupId);
    
    /**
     *　微信查询群状态
     * @param groupId 工会ID
     * @param opType  0：查询是否建群 1：查询是否加群
     *
     */
    extern void QueryWXGroupStatus(unsigned char* groupId,int opType);
    
    /**
     *
     *微信游戏圈传图功能
     *目前暂时对图片大小有限制，最好不能超过512K
     *@param imgData 图片数据
     *@param imgDataLen 图片数据长度
     *@param gameExtra 额外数据
     */
    extern void ShareToWXGameline(unsigned char* imgData,const int imgDataLen,unsigned char* gameExtra);
    /**
     *
     *上报unity版本数据
     *@param reportName 事件名称
     *@param reportData json字符串
     *
     */
    extern void ReportUnityData(char *reportName, char *reportData);
    /**
     * 协议形式打开浏览器
     * jsonStr： json格式的协议，可以控制浏览器 全屏/非全屏 是否有返回按钮等
     */
    extern void OpenFullScreenWebViewWithJson(const char *jsonStr);
    /**
     * 上报prajna
     * serialNumber：上报prajna的串号
     */
    extern void ReportPrajna(const char *serialNumber);
     /**
     * 注册消息推送
     * @param launchOptions ,"-application:didFinishLaunchingWithOptions:"中的(NSDictionary *)launchOptions参数转换为json字符串
     *
     *
     */
    extern void RegisterAPNSPushNotification(unsigned char *launchOptions);
    
    /**
     * 成功注册推送并拿到deviceToken
     * @param deviceToken ，"-application:didRegisterForRemoteNotificationsWithDeviceToken:"中的(NSData *)deviceToken参数转换为字符串
     *
     *
     */
    extern void SuccessedRegisterdAPNSWithToken(unsigned char *deviceToken);
    
    /**
     * 注册推送失败
     *
     *
     *
     */
    extern void FailedRegisteredAPNS();
    
    /**
     * 清理推送角标数字
     *
     *
     *
     */
    extern void CleanBadgeNumber();
    
    /**
     * 接收到推送消息
     * @param userInfo ，"-application:didReceiveRemoteNotification:"中的(NSDictionary *)userInfo参数转换为json字符串
     *
     *
     */
    extern void ReceivedMSGFromAPNS(unsigned char *userInfo);
    /**
     * 在游戏窗口中打开嵌入式浏览器页面
     * url 要打开的页面链接
     * 返回值 1表示打开成功，0或者负数表示打开失败
     */
    extern int OpenEmbeddedWebView(const char* url);
    /**
     * 在游戏窗口中以数据的形式打开浏览器页面
     * charset 数据的编码格式（目前只支持UTF-8编码的数据）
     * data 传递给页面的数据
     * lens 传递的数据长度
     * 返回值 1表示打开成功，0或者负数表示打开失败
     */
    extern int OpenEmbeddedWebViews(const char* charset , const char* data , int lens);
    /**
     * 在游戏窗口中关闭浏览器页面
     * 返回值 1表示关闭成功，0或者负数表示关闭失败
     */
    extern int CloseEmbeddedWebView();
    /**
     * 在游戏中发送信息到页面js函数
     * params 要传递给js函数的函数名、参数信息
     */
    extern void CallToEmbeddedWebView(const char* params);
    /**
     * 设置webview的背景图片
     * data 图片数据
     * lens 图片数据的长度
     */
    extern bool SetEmbeddedWebViewBackground(const char* imageData , int lens);
    /**
     *
     * 微信OpenBusinessView分享功能
     * @param businessType 业务内容 必填
     * @param query 业务参数 选填
     * @param extInfo 额外信息(Json格式)
     * @param extData iOS专用，指iOS本地沙盒路径视频文件的地址
     */
    extern void SendToWXWithOpenBusinessView(const unsigned char *businessType,
                                        const unsigned char *query,
                                        const unsigned char *extInfo,
                                        const unsigned char *extData);
    /**
     * 平台拉起事件
     * @param urlStr 平台拉起的url
     */
    extern bool HandleOpenUrl(unsigned char *urlStr);
    
    /**
     * 平台拉起事件
     * @param urlStr 平台拉起的url
     */
    extern bool HandleOpenUniversalLink(unsigned char *urlStr);
    
    /*
        *启动QQ小程序
        * @param miniAppID 必填，小程序的AppID（注：必须在QQ互联平台中，将该小程序与分享的App绑定）
        * @param miniPath  非必填，小程序的展示路径，不填展示默认小程序首页
        * @param type      非必填，小程序的类型，默认正式版(0)，可选测试版(1)、开发版(2)
        */
    extern void LaunchQQMiniApp(const unsigned char *miniAppID, const unsigned char *miniPath, int type);
    /**
     *
     * 手Q小程序分享功能
     * @param scene 标识发送手Q会话或者Qzone
     *         eQQScene.QQScene_QZone: 分享到空间(4.5以上版本支持)
     *         eQQScene.QQScene_Session: 分享到手Q会话
     * @param title 结构化消息的标题
     * @param desc 结构化消息的概要信息
     * @param url  兼容低版本的网页链接
     * ImageParams：
     * 此struct在android、ios上对应的字段不同。android需要填写图片路径：android_imagePath，ios需要自行读取填写图片数据ios_imageData和图片数据长度ios_imageDataLen
     * @param miniProgramAppid 游戏绑定的小程序appid.在connect.qq.com操作绑定小程序，游戏和小程序必须是同一主体才能绑定
     * @param miniProgramPath 小程序页面的path，必须
     * @param type 小程序类型，分为正式版、体验版
     * @return void
     */
    extern void SendToQQWithMiniApp(
                               int scene,
                               unsigned char *title,
                               unsigned char *desc,
                               unsigned char *url,
                               Byte* imgData,
                               int imgDataLen,
                               unsigned char *miniProgramAppid,
                               unsigned char *miniProgramPath,
                               int type);
    
    /**
     * 分享视频到空间
     * @param summary 分享的正文(无最低字数限制，最高1w字)
     * @param videoParams 分享的视频路径，Android支持本地地址，iOS支持视频数据
     * @param extraScene 区分分享的场景，用于异化小尾巴展示和feeds点击行为，支持iOS
     * @param messageExt 游戏自定义字段，点击分享消息回到游戏时会透传回游戏，不需要的话可以填写空串，支持iOS
     * 注意: 此功能只在手Q5.9.5及其以上版本支持
     */
    extern void SendToQQWithVideo(unsigned char *summary, unsigned char *ios_videoData,
                                  int ios_videoDataLen, unsigned char *extraScene, unsigned char *messageExt);
    /**
     * 设置是否允许收集敏感信息
    */
    extern void SetCouldCollectSensitiveInfo(bool couldCollect);
    
    /**
     * 以json形式设置敏感信息字段至各个组件SDK，目前支持{\"AndroidID\":\"xxx\", \"WiFiMacAddress\":\"xxx\", \"Imei\":\"xxx\", \"Model\":\"xxx\", \"Oaid\":\"xxx\", \"Imsi\":\"xxx\", \"Cid\":\"xxx\"}
    */
    extern void SetSensitiveInfo(const char *jsonInfo);
    /**
     * 以json形式设置敏感信息单字段开关，优先级小于总开关，目前支持设置AndroidID、Apn、Imei，QImei, QImei36
     * 参数示例{"AndroidID":true,"Apn":true,"Imei":false,"QImei":true,"QImei36":true}
     */
    extern void SetCollectSensitiveInfo(const char *jsonInfo);
    /**
     *  @param openUrl 要打开的url
     *  @param screenDir 内置浏览器支持的屏幕方向,0横竖屏,1竖屏,2横屏
     *  @param fullScreen 是否全屏
     *  @param algorithm 加密算法标识
     */
    extern void OpenGameDataAuthCenter(unsigned char *openUrl, int screenDir, bool fullScreen, const char *algorithm);
    /**
     * @brief 设置url后带着协议所需参数拉起销号页面
     * 
     * @param screenDir 内置浏览器支持的屏幕方向,0横竖屏,1竖屏,2横屏
     * @param isFullScreen 是否全屏
     * @param algorithm 加密算法标识
     */
    extern void OpenDeleteAccountUrl(int screenDir, bool isFullScreen, const char *algorithm);