Assets/Msdk/Adapter/iOS/iOSConnector.cs


        [DllImport("__Internal")]
        public static extern void BuglyLog (int level, string log);

		[DllImport("__Internal")]
        public static extern void CloseCrashReport();

		[DllImport("__Internal")]
		public static extern bool QueryWXGroupStatus(string unionid, int type);

		[DllImport("__Internal")]
		public static extern void CreateQQGroupV2(
			string guildId,
			string guildName,
            string leaderOpenId,
            string leaderRoleId,
            string leaderZoneId,
            string zoneId,
            string partition,
			string roleId,
            string roleName,
            string userZoneId,
            string userLabel,
            string nickName,
            string type,
            string areaId
		);

		[DllImport("__Internal")]
		public static extern void JoinQQGroupV2(
            string guildId,
            string guildName,
            string leaderOpenId,
            string leaderRoleId,
            string leaderZoneId,
            string zoneId,
            string partition,
            string roleId,
            string roleName,
            string userZoneId,
            string userLabel,
            string nickName,
            string type,
            string areaId,
            string groupId);

		[DllImport("__Internal")]
		public static extern void UnbindQQGroupV2(
            string guildId,
            string guildName,
            string leaderOpenId,
            string leaderRoleId,
            string leaderZoneId,
            string zoneId,
            string partition,
            string roleId,
            string roleName,
            string userZoneId,
            string userLabel,
            string nickName,
            string type,
            string areaId);

		[DllImport("__Internal")]
		public static extern void QueryQQGroupInfoV2(string groupId);

		[DllImport("__Internal")]
		public static extern void GetQQGroupCodeV2(
            string guildId,
            string guildName,
            string leaderOpenId,
            string leaderRoleId,
            string leaderZoneId,
            string zoneId,
            string partition,
            string roleId,
            string roleName,
            string userZoneId,
            string userLabel,
            string nickName,
            string type,
            string areaId);

		//[DllImport("__Internal")]
		//public static extern void QueryQQGroupKey(string groupId);

		[DllImport("__Internal")]
        public static extern void BindExistQQGroupV2(
            string guildId,
            string guildName,
            string leaderOpenId,
            string leaderRoleId,
            string leaderZoneId,
            string zoneId,
            string partition,
            string roleId,
            string roleName,
            string userZoneId,
            string userLabel,
            string nickName,
            string type,
            string areaId,
            string groupId,
            string groupName);

		[DllImport("__Internal")]
        public static extern void QueryBindGuildV2(string groupId, int type = 0);

		[DllImport("__Internal")]
		public static extern void GetQQGroupListV2();

		[DllImport("__Internal")]
		public static extern void RemindGuildLeaderV2(
            string guildId,
            string guildName,
            string leaderOpenId,
            string leaderRoleId,
            string leaderZoneId,
            string zoneId,
            string partition,
            string roleId,
            string roleName,
            string userZoneId,
            string userLabel,
            string nickName,
            string type,
            string areaId);

		[DllImport("__Internal")]
		public static extern void ShareToWXGameline(byte[] data, int lens, string gameExtra);

		[DllImport("__Internal")]
		public static extern void UnbindWeiXinGroup(string groupId);

		[DllImport("__Internal")]
		public static extern void ReportUnityData(string name, string jsonData);

		[DllImport("__Internal")]
		public static extern void OpenFullScreenWebViewWithJson(string jsonStr);

		[DllImport("__Internal")]
		public static extern void ReportPrajna(string serialNumber);

        [DllImport("__Internal")]
        public static extern void SendToQQWithArk(int scene, string title, string desc, string url, string imgUrl, string jsonString, string messageExt = "", string gameTag = "");

        [DllImport("__Internal")]
        public static extern void ReportException(int exception_type,
                               string exception_name,
                               string exception_msg,
                               string exception_stack,
                               string ext_info);

        [DllImport("__Internal")]
        public static extern void SendToQQWithRichPhoto(string summary, string imgParamsData, string extraScene, string messageExt);

        [DllImport("__Internal")]
        public static extern void QueryUnionID();


        [DllImport("__Internal")]
        public static extern void SendToQQWithText(string text, string extraScene, string messageExt);


        [DllImport("__Internal")]
        public static extern void RegisterAPNSPushNotification(string launchOptions);

        [DllImport("__Internal")]
        public static extern void SuccessedRegisterdAPNSWithToken(string deviceToken);

        [DllImport("__Internal")]
        public static extern void FailedRegisteredAPNS();

        [DllImport("__Internal")]
        public static extern void CleanBadgeNumber();

        [DllImport("__Internal")]
        public static extern void ReceivedMSGFromAPNS(string userInfo);

        [DllImport("__Internal")]
        public static extern int OpenEmbeddedWebView(string url);

        [DllImport("__Internal")]
        public static extern int OpenEmbeddedWebViews(string charset, string data, int lens);

        [DllImport("__Internal")]
        public static extern int CloseEmbeddedWebView();

        [DllImport("__Internal")]
        public static extern void CallToEmbeddedWebView(string embeddedParams);

        [DllImport("__Internal")]
        public static extern bool SetEmbeddedWebViewBackground(byte[] imageData, int lens);

        [DllImport("__Internal")]
        public static extern bool SendToWXWithOpenBusinessView(string businessType,
                                        string query,
                                        string extInfo,
                                        string extData);
        [DllImport("__Internal")]
		public static extern void GetCountryFromIP();

		[DllImport("__Internal")]
		public static extern void GetIPInfo();
		
        [DllImport("__Internal")]
        public static extern void LaunchQQMiniApp(
            string miniAppID,
            string miniPath,
            int type);

		
		[DllImport("__Internal")]
        public static extern void SendToQQWithMiniApp(
                int scene,
                string title,
                string desc,
                string url,
                byte[] imgData,
                int imgDataLen,
                string miniProgramAppid,
                string miniProgramPath,
                int type = 0);

        [DllImport("__Internal")]
        public static extern bool HandleOpenUrl(string urlStr);

        [DllImport("__Internal")]
        public static extern bool HandleOpenUniversalLink(string urlStr);

        [DllImport("__Internal")]
        public static  extern void SendToQQWithVideo(string summary, byte[] videoParamsData, int videoParamsLen, string extraScene, string messageExt);

		[DllImport("__Internal")]
        public static extern void SetCouldCollectSensitiveInfo(bool couldCollect);

		[DllImport("__Internal")]
		public static extern void SetCollectSensitiveInfo(string jsonInfo);
    
		[DllImport("__Internal")]
        public static extern void SetSensitiveInfo(string jsonInfo);

		[DllImport("__Internal")]
		public static extern void OpenGameDataAuthCenter(string openUrl, int screenDir, bool fullScreen, string algorithm);

		[DllImport("__Internal")]
		public static extern void OpenDeleteAccountUrl(int screenDir, bool isFullScreen, string algorithm);

    }

}
#endif
